[package]
name = "netaudio_renderer"
version = "0.1.0"
authors = ["Raffael Zica <raffael@pixeltastic.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
toml = "0.5"

[dependencies.rodio]
version = "0.9.0"
